实现h264视频的播放

--- a/app/src/main/res/layout/activity_get_screen.xml
+++ b/app/src/main/res/layout/activity_get_screen.xml
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="停止录制"
-            android:id="@+id/btn_stop"/>
+            android:text="开始录制"
+            android:id="@+id/btn_recordOrStop"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
