--- a/app/src/main/res/layout/activity_get_screen.xml
+++ b/app/src/main/res/layout/activity_get_screen.xml
@@ -13,6 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+    <View
+        android:layout_width="match_parent"
+
+        android:layout_height="5dp"
+        android:background="#22D9DF"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
