--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.SecondActivity">
+    tools:context=".activity.HumanSegActivity">
 
     <SurfaceView
         android:layout_width="match_parent"
