--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,6 +50,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:text="播放 H265" />
+
+        <Button
+            android:id="@+id/btn_audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="播放声音" />
+
+        <Button
+            android:id="@+id/btn_MP4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="播放 MP4" />
     </LinearLayout>
 
 </FrameLayout>
